--- a/Searchploy.html
+++ b/Searchploy.html
@@ -185,7 +185,7 @@ a:hover {
         <h1>DREAMPLOY</h1>
       </div>
       <ul>
-        <li><a href="indexploy.html">Head Quarters 🏠︎</a></li>
+        <li><a href="index.html">Head Quarters 🏠︎</a></li>
         <li><a href="discoveryploy.html">Discovery</a></li>
         <li><a href="Searchploy.html">Log In</a></li>
         <li><a href="aboutploy.html">About</a></li>
