--- a/careerploy.html
+++ b/careerploy.html
@@ -59,6 +59,46 @@
       max-width: 800px;
       margin: 20px auto;
     }
+    /*separation*/
+    .option-item {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center;
+  margin: 30px auto;
+  max-width: 700px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
+}
+
+.option-item img {
+  width: 120px;
+  height: auto;
+  margin: 10px 0;
+  border-radius: 8px;
+}
+
+.option-item p {
+  font-size: 24px;
+  font-weight: bold;
+  color: #bd4812;
+  margin: 0 0 10px 0;
+  text-align: center;
+}
+
+/*separation*/
+    .small {
+  text-align: center;
+  margin: 20px auto;
+  font-size: 18px;
+  color: #bd4812;
+  font-weight: bold;
+}
+
   </style>
 </head>
 
@@ -70,7 +110,7 @@
         <h1>DREAMPLOY</h1>
       </div>
       <ul>
-        <li><a href="indexploy.html">Head Quarters 🏠︎</a></li>
+        <li><a href="index.html">Head Quarters 🏠︎</a></li>
         <li><a href="discoveryploy.html">Discovery</a></li>
         <li><a href="Searchploy.html">Log In</a></li>
         <li><a href="aboutploy.html">About</a></li>
@@ -84,5 +124,54 @@
     <p style="color: black; font-weight: bold;">Your dream job isn’t just a title—it’s a reflection of who you are and what you love.</p>
     <p style="color: black;">Whether you're drawn to solving problems, leading teams, helping others, or creating something new, there’s a career out there that fits your passion. Dreamploy is here to help you uncover it. Browse real-world roles, imagine your future, and start building the skills to get there. The journey to your dream career starts now—let’s go find it!</p>
   </div>
+  <div class="careers">
+    <div class="option-item">
+      <div class="image-wrapper">
+        <img src="https://i.pinimgproxy.com/?url=aHR0cHM6Ly9jZG4taWNvbnMtcG5nLmZsYXRpY29uLmNvbS8yNTYvMTQ2NzIvMTQ2NzIyODMucG5n&ts=1746678801&sig=9f855142dd81829541686b11b4c80e6cb79c78622d904e70400577d9bfbe0aed" alt="Dream 1">
+      </div>
+      <p>Teacher/Educator</p>
+      It's all about: Inspiring students, creating engaging lessons, and making a lasting impact.
+
+The Truth: Teaching is a purpose-driven profession that shapes lives. Every day is an opportunity to light a spark, nurture curiosity, and empower the next generation.
+
+You Might Love This Job If: You care deeply about others, love learning, and want to help people grow.
+
+Recommended College Courses: Education, Child Psychology, Curriculum Development, Teaching Methods, Special Education.
+
+Next Steps: Study education, volunteer or tutor, and specialize in the subjects that inspire you most.
+    </div>
+    <div class="option-item">
+      <div class="image-wrapper">
+        <img src="https://i.pinimgproxy.com/?url=aHR0cHM6Ly9jZG4taWNvbnMtcG5nLmZsYXRpY29uLmNvbS8yNTYvMTM3OTQvMTM3OTQzNjIucG5n&ts=1746678979&sig=eeee8e50a499f74f23164261a20ca380b776c4111f79abfc5fe42fb8e348d46e" alt="Dream 2">
+      </div>
+      <p>Entrepreneur</p>
+      It's all about: Building your own business, making a difference, and enjoying the freedom of being your own boss.
+
+The Truth: Entrepreneurship is a thrilling adventure of creativity and problem-solving. It comes with ups and downs, but each step builds resilience and confidence. The freedom to innovate and create something meaningful is the ultimate reward.
+
+You Might Love This Job If: You’re full of ideas, adaptable, and motivated to turn passion into purpose.
+
+Recommended College Courses: Business Administration, Marketing, Accounting, Entrepreneurship, Leadership.
+
+Next Steps: Start with a simple business idea, connect with mentors, and embrace learning as you go.
+    </div>
+    <div class="option-item">
+        <div class="image-wrapper">
+          <img src="https://i.pinimgproxy.com/?url=aHR0cHM6Ly9jZG4taWNvbnMtcG5nLmZsYXRpY29uLmNvbS8yNTYvMTc1ODkvMTc1ODkwMTUucG5n&ts=1746679076&sig=e090e502a0502fb8c085a15ac5e56d01deded450535deb8e2d5d106bce187e85" alt="Dream 2">
+        </div>
+        <p>Fashion Designer</p>
+        It's all about: Designing stunning outfits, attending global fashion shows, and influencing style trends.
+
+The Truth: Fashion design is a blend of artistry and precision. From hands-on sketching and fabric selection to leading creative teams, every step sharpens your vision and resilience. The path is dynamic, and every challenge fuels your evolution as a creator.
+
+You Might Love This Job If: You’re deeply creative, detail-oriented, and excited by ever-evolving trends.
+
+Recommended College Courses: Fashion Design, Textile Science, Fashion Merchandising, Sewing and Pattern Making.
+
+Next Steps: Enroll in a fashion program, apprentice under professionals, and start building a portfolio that tells your unique design story.
+      </div>
+      <div class="small">
+        Contact us to see more!
+      </div>
 </body>
 </html>
