--- a/discoveryploy.html
+++ b/discoveryploy.html
@@ -139,7 +139,7 @@
         <p>DREAMPLOY</p>
       </div>
       <ul>
-        <li><a href="indexploy.html">Head Quarters 🏠︎</a></li>
+        <li><a href="index.html">Head Quarters 🏠︎</a></li>
         <li><a href="Communityploy.html">Discovery</a></li>
         <li><a href="Searchploy.html">Log In</a></li>
         <li><a href="aboutploy.html">About</a></li>
